[gd_scene load_steps=37 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/PlayerSprite.png" type="Texture" id=2]
[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/HammerHitbox.gd" type="Script" id=4]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=37]
extents = Vector2( 1.64474, 3 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitboxPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot/HammerHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "hit_left"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.09, 0.18, 0.28 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hit_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/HammerHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.19, 0.29 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=6]
resource_name = "hit_right"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.09, 0.18, 0.28 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hit_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/HammerHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.19, 0.29 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "idz_lewo"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idz_prawo"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=35]
resource_name = "roll"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finished"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "stoj"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "hit_left"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "hit_right"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "hit_right"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "hit_left"

[sub_resource type="AnimationNodeBlendSpace2D" id=27]
blend_point_0/node = SubResource( 30 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 31 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 32 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 33 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "stoj"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "stoj"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "stoj"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "stoj"

[sub_resource type="AnimationNodeBlendSpace2D" id=20]
blend_point_0/node = SubResource( 23 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 24 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 25 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 26 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "idz_lewo"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "idz_prawo"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "idz_prawo"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "idz_lewo"

[sub_resource type="AnimationNodeBlendSpace2D" id=19]
blend_point_0/node = SubResource( 15 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 16 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 17 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 18 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachine" id=13]
states/hit/node = SubResource( 27 )
states/hit/position = Vector2( 372, 183 )
states/idle/node = SubResource( 20 )
states/idle/position = Vector2( 372, 104 )
states/run/node = SubResource( 19 )
states/run/position = Vector2( 522, 104 )
transitions = [ "idle", "run", SubResource( 21 ), "run", "idle", SubResource( 22 ), "idle", "hit", SubResource( 28 ), "hit", "idle", SubResource( 29 ) ]
start_node = "idle"
graph_offset = Vector2( -6, 56 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=14]

[sub_resource type="CapsuleShape2D" id=34]
radius = 4.0
height = 2.0

[sub_resource type="CapsuleShape2D" id=36]
radius = 2.0
height = 4.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -5 )
texture = ExtResource( 2 )
hframes = 28
frame = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4.52503e-07, 1.125 )
rotation = -1.5708
scale = Vector2( 1.14, 1 )
shape = SubResource( 37 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/hit_left = SubResource( 7 )
anims/hit_right = SubResource( 6 )
anims/idz_lewo = SubResource( 3 )
anims/idz_prawo = SubResource( 4 )
anims/roll = SubResource( 35 )
anims/stoj = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 13 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 14 )
parameters/hit/blend_position = Vector2( 0, 0 )
parameters/idle/blend_position = Vector2( 0, 0 )
parameters/run/blend_position = Vector2( 0, 0 )

[node name="HitboxPivot" type="Position2D" parent="."]
position = Vector2( 0, -2 )
__meta__ = {
"_gizmo_extents_": 8.0
}

[node name="HammerHitbox" parent="HitboxPivot" instance=ExtResource( 3 )]
collision_mask = 8
script = ExtResource( 4 )

[node name="CollisionShape2D" parent="HitboxPivot/HammerHitbox" index="0"]
position = Vector2( 5, 0 )
shape = SubResource( 34 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -1 )
shape = SubResource( 36 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="HitboxPivot/HammerHitbox"]
[editable path="Hurtbox"]
